--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
 <h1><span class="chess-icon">♔</span> CS 240 Chess Server</h1>
 <p>
     The CS 240 Chess Server Web API is described below. Some of the APIs require a request body to be sent (like
-    <code>/user/login</code> and <code>/user/register</code>), while others require an Authorization authData
+    <code>/user/login</code> and <code>/user/register</code>), while others require an Authorization authToken
     (received at login). To view the required JSON format, click on a command below and look at the example request
     body. To try out an API, modify the request as needed, and press Send.
 </p>
@@ -27,8 +27,8 @@
             <div class="path">/user</div>
         </td>
         <td>
-            <span class="description">Register a user</span> If successful, an authorization authData is returned. You
-            may use the authData with future requests that require authorization. No authorization authData is
+            <span class="description">Register a user</span> If successful, an authorization authToken is returned. You
+            may use the authToken with future requests that require authorization. No authorization authToken is
             required
             to call this endpoint.
         </td>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="input">
-        <label for="authData">Auth Token:</label> <input type="text" id="authData" name="authData"/>
+        <label for="authToken">Auth Token:</label> <input type="text" id="authToken" name="authToken"/>
     </div>
 
     <div class="input">
